<resources>
    <string name="app_name">맛집 등록</string>

    <string name="button_prev">이전</string>
    <string name="button_add">추가</string>
    <string name="button_ok">확인</string>

    <string name="hint_name">맛집 이름</string>
    <string name="hint_address">맛집 주소</string>
    <string name="hint_tele">맛집 전화번호</string>
    <string name="hint_desc">맛집 설명</string>

    <string name="count_char">글자수 : %1$d/500</string>
</resources>
