<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:inputType="text"
        android:maxLines="1"
        android:background="@drawable/shape_round_rectangle"
        android:padding="16dp"
        android:hint="@string/hint_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/shape_round_rectangle"
        android:padding="16dp"
        android:hint="@string/hint_address"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edit_tele"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:inputType="phone"
        android:maxLines="1"
        android:background="@drawable/shape_round_rectangle"
        android:padding="16dp"
        android:hint="@string/hint_tele"
        app:layout_constraintTop_toBottomOf="@+id/edit_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_tele"/>

    <EditText
        android:id="@+id/edit_desc"
        android:layout_width="0dp"
        android:layout_height="326dp"
        android:layout_margin="4dp"
        android:inputType="textMultiLine"
        android:background="@drawable/shape_round_rectangle"
        android:padding="16dp"
        android:hint="@string/hint_desc"
        android:gravity="start|top"
        app:layout_constraintTop_toBottomOf="@+id/text_count"
        app:layout_constraintBottom_toTopOf="@+id/button_prev"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/button_prev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round_rectangle"
            android:text="@string/button_prev"
            android:gravity="center"
            android:padding="16dp"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/button_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round_rectangle"
            android:text="@string/button_next"
            android:gravity="center"
            android:padding="16dp"/>
    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />
</android.support.constraint.ConstraintLayout>